RESOLVED FIXED241677
SharedWorkerGlobalScope::close should not directly stop its thread
https://bugs.webkit.org/show_bug.cgi?id=241677
Summary SharedWorkerGlobalScope::close should not directly stop its thread
youenn fablet
Reported 2022-06-16 02:21:51 PDT
Attachments
youenn fablet
Comment 1 2022-06-16 02:29:13 PDT
EWS
Comment 2 2022-06-16 12:30:51 PDT
Committed r295603 (251608@main): <https://commits.webkit.org/251608@main> Reviewed commits have been landed. Closing PR #1574 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.