SharedWorkerGlobalScope::close should not directly stop its thread https://bugs.webkit.org/show_bug.cgi?id=241677 rdar://95010255

Patch by Youenn Fablet <youennf@gmail.com> on 2022-06-16
Reviewed by Alex Christensen.

We were directly stopping the worker thread when calling SharedWorkerGlobalScope::close.
This can trigger the case of stopping the worker thread concurrently from main thread and shared worker thread.
Instead, we reuse the existing Worker infastructure to tell its SharedWorkerThreadProxy to terminate.

* Source/WebCore/workers/WorkerOrWorkletThread.cpp:
(WebCore::WorkerOrWorkletThread::stop):
* Source/WebCore/workers/shared/SharedWorkerGlobalScope.cpp:
(WebCore::SharedWorkerGlobalScope::close): Deleted.
* Source/WebCore/workers/shared/SharedWorkerGlobalScope.h:
* Source/WebCore/workers/shared/context/SharedWorkerThreadProxy.cpp:
(WebCore::SharedWorkerThreadProxy::workerGlobalScopeClosed):
* Source/WebCore/workers/shared/context/SharedWorkerThreadProxy.h:

Canonical link: https://commits.webkit.org/251608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295603 268f45cc-cd09-0410-ab3c-d52691b4dbfc